SigningProfileResolver